@@ -11,11 +11,15 @@ noinst_DATA = \
 
 install-data-local:
 	$(INSTALL) -m 0755 -d "$(DESTDIR)$(sysconfdir)/init.d"; \
-	test -f "$(DESTDIR)$(sysconfdir)/init.d/munge" && new=".new"; \
+	test ! -f "$(DESTDIR)$(sysconfdir)/init.d/munge" \
+	  || cmp $(srcdir)/munge.init "$(DESTDIR)$(sysconfdir)/init.d/munge" \
+	  1>/dev/null 2>&1 || new=".new"; \
 	$(INSTALL) -m 0755 $(srcdir)/munge.init \
 	  "$(DESTDIR)$(sysconfdir)/init.d/munge$${new}"; \
 	test -d "/etc/sysconfig" && d="sysconfig" || d="default"; \
-	test -f "$(DESTDIR)$(sysconfdir)/$$d/munge" && new=".new"; \
+	test ! -f "$(DESTDIR)$(sysconfdir)/$$d/munge" \
+	  || cmp $(srcdir)/munge.sysconfig "$(DESTDIR)$(sysconfdir)/$$d/munge" \
+	  1>/dev/null 2>&1 || new=".new"; \
 	$(INSTALL) -m 0755 -d "$(DESTDIR)$(sysconfdir)/$$d"; \
 	$(INSTALL) -m 0755 $(srcdir)/munge.sysconfig \
 	  "$(DESTDIR)$(sysconfdir)/$$d/munge$${new}"; \
