@@ -1,3 +1,10 @@
+2006-09-01  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/etc/Makefile.am: Changed the install-data-local target so the
+	  installed munge.init and munge.sysconfig files would only be given
+	  the ".new" suffix if the files already existed at the destination
+	  and differed from the files about to be installed.
+
 2006-08-31  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/libcommon/auth_policy.h: Updated comment to add Darwin to the
